--- a/lesson03/css/small.css
+++ b/lesson03/css/small.css
@@ -3,7 +3,7 @@ body {
 }
 main {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgb(8, 6, 6);
+    color: #000000;
     max-width: 750px;
     margin: 0 auto;
     display: grid;
@@ -12,38 +12,39 @@ header, footer {
     background-color: #2c7e9e;
     padding: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #f7f7f7;
+    color: #f8f4f4;
     text-align: center;
 }
 header {
-    font-size: 2.5rem;
+    font-size: 3.0rem;
     font-weight: 900;
 }
 nav {
-    font-family: sans-serif;
-    background-color: #2c7e93;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+    background-color: #349bb4;
     text-align: center;
     display: flex;
-    flex-direction: column;
-    color: #f7f7f7;
+    flex-direction: row;
+    color: #000000;
 }
 nav div {
-    flex: 1 1 auto;
+    flex: 1 0 auto;
 }
 nav a {
-    display: block;
-    color: #fbfbfb;
+    display: inline-block;
+    color: #080000;
     text-align: center;
-    padding: 15px;
+    padding: 18px;
     text-decoration: none;
 }
 nav a:hover {
-    background-color: #c9aa77;
+    background-color: #d6a048;
     color: #000000;
-    font-size: 1.0rem;
+    font-size: 1.2rem;
 }
 h1, h2 {
-    font-family: Lora, serif;
+    font-family: sans-serif, serif;
     margin: 10px;
 }
 h1 {
