--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,77 +1,197 @@
-@media (min-width: 50em) {
-  /* Header */
-  header {
-      display: flex;
-      justify-content: space-between;
-      padding-right: 5px;
+@media screen and (min-width: 931px)  {
+    a:link {
+        color: var(--headers);
+    }
+    a:visited {
+        color: var(--back);
+    }
+    
+    a.seen {
+        color: var(--back);
+    }
+  body{
+      max-width: 1400px ;
   }
-  header img {
-      max-width: 250px;
-  }
-  .social {
-      padding-right: 0;
-  };
+    header {
+        display: grid;
+        grid-template-columns: .8fr 1.2fr 2fr .5fr .5fr;
+        grid-template-rows: repeat(3, auto)
+        
+    }
+    .headings1 {
+        font-size: 2rem;
+        margin-top: -.4rem;
+       
+    }
+    
+    .headings2 {
+        font-size: 1rem;
+        margin-top: -.8rem;
+    }
+    nav button {
+        display: none;
+    }
+    nav {
+        grid-row: 1;
+        grid-column: 3;
+        text-align: right;
+    }
+    nav ul{
+        display: flex;
+        grid-row:1;
+        grid-column: 3;
+        margin-left: 1rem;
+        font-size: 1.1rem;
+        
+    }
+    nav ul li a {
+       
+        padding: .8rem 2vw;
+        text-decoration: none;
+        color: #333;
+        color: var(--back);
+        border:none;
+        background-color: var(--main);
+    }
+   
+    #facebook {
+        grid-column: 4;  
+    }
+    
+    #instagram {
+       grid-column: 5;   
+    }
+    
+    .social img {
+        max-width: 50px;
+        border-radius: 15px;
+    }
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 3fr 1 fr;
+        grid-template-rows: repeat(3, auto);
+        column-gap: .1rem;
+    }
 
-  /* Navigation */
-  .social {
-      max-width: 50px;
-  }
-  nav button {
-      display: none;
-  }
-  nav ul.hide {
-      display: flex;
-      flex-direction: row;
-      list-style: none;
-      justify-content: space-around;
-  }
-  
-  /* Main */
-  main {
-      margin-right: 10px;
-      margin-left: 10px;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: auto;
-  }
-  #event {
-      grid-area: 1/1/2/2;
-  }
-  #hero {
-      height: auto;
-      grid-area: 1/2/3/4;
-  }
-  #spotlight {
-      height: auto;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: auto;
-      grid-area: 1/4/4/5;
-  }
-  #spot1 {
-      grid-area: 1/1/2/2;
-      height: auto;
-  }
-  #spot2 {
-      grid-area: 2/1/3/2;
-      height: auto;
-  }
-  #spot3 {
-      display: inline-block;
-      height: auto;
-      grid-area: 3/1/4/2;
-  }
-  #weather {
-      grid-area: 2/1/3/2;
-  }
-  #join {
-      grid-area: 3/1/4/2;
-  }
-  #news {
-      grid-area: 3/2/4/4;
-  }
+    .hero {
+        grid-row: 1/3;
+        grid-column: 2;
+    }
 
-  /* Footer */
-  footer img {
-      max-width: 250px;
-  }
+    .event {
+        grid-row: 1;
+        grid-column: 1;
+
+    }
+
+    .weather {
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .news {
+        grid-row: 3;
+        grid-column: 2;
+    }
+
+    .spotlight {
+        grid-row: 1/4;
+        grid-column: 3;        
+        display: flex;
+        flex-direction: column;
+    }
+    .join {
+        display: block;
+        grid-row: 3;
+        grid-column: 1;
+    }
+    #spot3{
+        display: block;
+
+    }
+    .depot{
+        display: none;
+    }
+    footer {
+        text-align: left;
+        font-size: 100%;
+        display: grid;
+        grid-template-columns: .5fr 2fr 1.5fr;
+        column-gap: 10px;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    
+    footer>div {
+        margin: 0;
+        padding: 0;
+    }
+    
+    footer .logo {
+        grid-column: 1;
+        grid-row: 1/5;
+    
+    }
+    
+    footer .logo img {
+        max-width: 70%;
+        min-width: 100px;
+        margin-left: 1rem;
+    }
+    
+    .col2 {
+    
+        margin-top: 1rem;        
+        grid-column: 2;
+    
+    }
+    
+    .find-us {
+        grid-column: 3;
+        padding-top: 1rem;
+        text-align: right;
+        margin-right: 1rem;
+    }
+    
+    footer .seperator {
+        display: block;
+        color: var(--headers);
+    }
+#last-seperator {
+    display: block;
 }
+    .about {
+        margin-top: .5rem;
+        margin-bottom: 0;    
+        border-top: var(--headers) solid 1px;
+        text-align: center;
+        grid-column: 1/4;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+    
+    .about>* {
+        margin-top: -.5rem;
+        padding-right: 1rem;
+        
+    }
+    
+    #last-update {
+       
+        padding-bottom: 0;
+      
+    
+    }
+    .discover{
+        
+        display: grid;
+        grid-template-columns: repeat(2, 300px);
+        grid-template-rows: repeat(auto, 200px);
+        column-gap: 1rem;     
+       
+    }
+
+}
+
