--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,73 +1,130 @@
-@media (min-width: 30.5em) {
-    
-  /* Header */
-  .social {
-      max-width: 22%;
-  }
+@media screen and (min-width: 530px) and (max-width:930px) {
+    .container{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: repeat(5, auto);
+        }
+    header .logo img {       
+        min-width: 80px;        
+    }
+    .headings1{
+        font-size: 2rem;
+    }
+    .headings2{
+        font-size: 1rem;
+        margin-top: -.8rem;
+    }
+    #hamburgerBtn {
+        text-align: right;
+        margin-right: 1rem;
+    }
+    .hero{
+        grid-row:1;
+        grid-column: 1/4;
+    }
+    .event{
+        grid-row:5;
+        grid-column: 1/3;
+    }
+    .weather{
+        grid-row: 5;
+        grid-column: 3;
+    }
 
-  /* Navigation */
-  
+    .news{
+        grid-row:2;
+        grid-column: 1/4;
+    }
 
-   /* Main */
-  main{
-      display: grid;
-      grid-column-gap: 10px;
-  }
-  h1 {
-      font-size: 2rem;
-  }
-  h2 {
-      font-size: 1.5rem;
-  }
-  #hero {
-      grid-column: 1/4;
-  }
-  #news {
-      grid-row-start: 2;
-      grid-column: 1/4;
-  }
-  #spotlight {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      height: 140px;
-      grid-row-start: 3;
-      grid-column: 1/4;
-  }
-  #join {
-      display: block;
-      grid-row-start: 4;
-      grid-column: 1/4;
-  }
-  #event {
-      grid-row-start: 5;
-      grid-column: 1/3;
-  }
-  #weather {
-      grid-row-start: 5;
-      grid-column: 3/4;
-  }
+    .spotlight{
+        grid-row: 3;
+        grid-column: 1/4;;
+            display: flex;
+            flex-direction: row;
+        }
 
-  /* Footer */
-  section.contactInfo {
-      display: grid;
-  }
-  footer img {
-      max-width: 100%;
-      grid-row-start: 1;
-      grid-column: 1/2;
-      align-self: center;
-  }
-  #address {
-      grid-row-start: 1;
-      grid-column: 2/4;
-      text-align: left;
-      overflow: auto;
-      align-self: center;
-  }
-  #contact {
-      grid-row-start: 1;
-      grid-column: 4/5;
-      text-align: right;
-      align-self: center;
-  }
+    .join {
+        display: block;
+        visibility: visible;
+        grid-row: 4;
+        grid-column: 1/4;
+        }
+
+footer {
+    text-align: left;    
+    font-size: 100%;
+    display: grid;    
+    grid-template-columns: .5fr 2fr 1.5fr;    
+    column-gap: 10px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
+footer >div{
+    margin:0;
+    padding:0;
+}
+footer .logo  {    
+    grid-column: 1;
+    grid-row: 1/5;
+   
+}
+footer .logo img {
+    max-width: 70%;
+    min-width: 100px;
+    margin-left: 1rem;
+}
+.col2{
+    
+    margin-top: 1rem;;
+    grid-column: 2;
+    
+}
+.find-us{    
+    grid-column: 3;
+   padding-top: 1rem;
+}
+
+footer .seperator {
+    display: block;
+    color: var(--headers);
+}
+
+
+.about {
+    margin-top:1rem;
+    margin-bottom: 0;    
+    border-top: var(--headers) solid 1px;    
+    grid-column: 1/4;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.about>* {
+    margin-top: -.5rem;
+    padding-right: 1rem;
+   
+}
+
+#last-update {
+    padding-bottom: 0;
+    flex-basis: 100%;
+    text-align: center;
+    
+}
+#last-seperator {
+    display: none;
+}
+    .discover {
+    
+        display: grid;
+        grid-template-columns: repeat(2, 300px);
+        grid-template-rows: repeat(auto, 200px);
+        column-gap: 1rem;
+    
+    }
+}
+
+
+
