--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,146 +1,247 @@
-body {
-    background-color: #e7e3e3;
-}
-main {
+:root {
+    --main: rgba(3, 165, 194, 0.836);
+    --mainlight: rgb(17, 124, 185);
+    --headers: rgb(252, 250, 250);
+    --attention: #ac6305;
+    --links: #e70e0e;
+    --visited: #000000;
+    --text1: #f5efef;
+    --back: #035c97;
+    --color3: rgb(0, 0, 0);
+    --color7: rgb(13, 93, 133);
+
+    color: var(--text1);
+
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: #000000;
-    max-width: 750px;
-    margin: 0 auto;
-    display: grid;
+    --nav-link-color: var(--attention);
 }
-header, footer {
-    background-color: #2c7e9e;
-    padding: 10px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #f8f4f4;
-    text-align: center;
+
+
+a:link {
+    color: var(--attention);
 }
-header {
-    font-size: 5.5em;
-    font-weight: 900;
+
+a:visited {
+    color: var(--headers);
 }
-#headerLogo {
-    width: 50%;
-    align-self: center;
+
+a.seen {
+    color: var(--headers);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: var(--headers);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, 'Times New Roman', Times, serif;
+
+}
+
+body {
+    background-color: var(--main);
+    margin: 2em;
+}
+
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
     margin: 0;
 }
-#siteTitle {
-    align-self: center;
-}
-.social {
-    max-width: 25%;
-    list-style: none;
-    align-self: center;
-    text-align: right;
-}
-nav {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.0em;
-    background-color: #349bb4;
-    text-align: right;
-    display: row;
-    flex-direction: row;
-    color: #000000;
-}
-nav div {
-    flex: 1 0 auto;
-}
-nav a {
-    display: inline-block;
-    color: #080000;
-    text-align: center;
-    padding: 18px;
+
+nav ul li a {
+    display: block;
+    padding: .8rem 2vw;
     text-decoration: none;
+    color: rgb(197, 12, 12);
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+    background-color: var(--color7);
 }
-nav a:hover {
-    background-color: #d6a048;
-    color: #000000;
-    font-size: 1.2rem;
-}
-#dateSpan {
-    color: #fbfbfb;
-    background-color: #2c7e9e;
-    margin: 0;
-    padding: 10px;
-    text-align: center;
-    font-family: Lora, serif;
-    font-size: .9rem;
-}
-h1, h2 {
-    font-family: sans-serif, serif;
-    margin: 10px;
-}
-h1 {
-    font-size: 2.5rem;
-}
-h2 {
-    font-size: 2rem;
-}
-p {
-    margin: 10px;
-}
-img {
-    max-width: 500px auto;
-    margin: 10px;
-
-}
-#join {
-    display: none;
-}
-.link {
-    color: #000;
-    text-decoration: underline;
-}
-#hero, #event, #weather, #news, #join {
-    height: 200px;
-    width: auto;
-    border: 1px solid black;
-    background-color: #aaa;
-    padding: 15px;
-    margin-top: 15px;
-}
-#spotlight {
-    height: 280px;
-    width: fit-content;
-    border: 1px solid black;
-    background-color: #aaa;
-    padding: 15px;
-    margin-top: 15px;   
-}
-#spot1, #spot2, #spot3 {
-    height: 100px;
-    width: fit-content;
-    border: 1px solid black;
-    padding: 15px;
-    margin-top: 15px;
-}
-#spot3 {
-    display: none;
-}
-.link {
-    color: rgb(247, 240, 240);
-    text-decoration: underline;
+nav ul li a:hover {  
+    background-color: var(--color3);
 }
 
-footer {
-    font-family: sans-serif, serif;
-    text-align: center;
+
+nav ul {
+    display: none;
 }
-footer h2 {
+
+nav ul.open {
+    display: block;
+}
+
+/*------------------------------------*/
+header footer{
+    margin-left: .2rem;
+    margin-right: .2rem;
+}
+header{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, auto);    
+    
+}
+
+header .logo{
+   margin-left: 1rem;
+}
+
+header .logo img {
+  max-width: 100%;
+  min-width: 50px;
+  grid-row:1/3;
+  grid-column:1;
+}
+
+.headings{
+    grid-row:1/3;
+    grid-column: 2;
+    margin-left: 1rem;
+    margin-top: .5rem;
+    display: flex;
+    flex-direction: column;
+}
+.headings1 {
     font-size: 1rem;
-    font-style: italic;
+    margin-top: -.4rem;
 }
-footer img {
-    max-width: 40%;
-    margin-bottom: 0;
+ .headings2{    
+    font-size: .8rem;
+    margin-top: -.4rem;
+ }
+.social{   
+    margin-left: .5rem;
 }
-footer .address {
-    font-size: 1.5em;
-    font-style: italic;
+#facebook{
+    grid-row:1;
+    grid-column: 3;
+    margin-left: .5rem;
+    text-align: right;
 }
-.contactInfo {
-    font-size: 1.0em;    
+#instagram{
+    grid-row:1;
+    grid-column: 4;
+    margin-left: .5rem;
+    text-align: left;
 }
-.classInfo {
-    font-size: 1.0em;;
+ .social img{        
+     max-width: 40px;
+    border-radius: 15px;
+ }
+ nav{
+grid-row:1;
+grid-column: 5;
+text-align: center;
+ }
+#hamburgerBtn{
+background-color: var(--headers);
+padding: 1.2em;
+
+margin-left: .5rem;
+margin-right: .5rem;
+
 }
+
+.headerDate{
+    grid-row: 3;
+    grid-column: 1/6;
+    text-align: center;
+    margin: 0 1rem ;
+    padding: .2rem 0;
+    background-color: var(--mainlight);
+    color: var(--headers);
+    font-size: 1.0rem;
+}
+
+
+.container div {
+    background-color: var(--back);
+    padding: .5rem;  
+  
+    margin: 1rem;
+}
+
+
+.join {
+    display: block;
+    grid-row: 3;
+    grid-column: 1;
+}
+.spot a:link{
+color: var(--main);
+}
+.spot a:visited {
+    color: var(--main);
+}
+.spot a:hover {
+    background-color: var(--headers);
+}
+
+#spot3{
+    display: none;
+}
+
+footer{
+    text-align: center;
+    background-color: var(--mainlight);
+    font-size:90%;
+    
+}
+
+footer .logo img{
+    max-width: 100%;
+    max-width: 100px;
+    margin-top: 1rem;
+}
+footer .logo-label{
+margin-top:0;
+padding-top:.3rem;
+
+}
+footer .address{
+margin-top:-1rem;
+}
+
+footer .address2{
+margin-top:-1rem;
+}
+
+footer .phone{
+    margin-top:-1rem;
+}
+footer .map{
+    margin-top:-1rem;
+}
+footer .seperator {
+    display: none;
+}
+.about{
+    padding-top: 1.3rem;
+    border-top: var(--headers) solid 1px;
+    margin:0 1rem;
+}
+
+.about > *{
+    margin-top:-1rem;
+    padding:0;
+}
+#last-update{
+    padding-bottom: .5rem;
+}
+    .discover{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .discoverImg{
+        width: 300px;
+        height: 180px;
+        margin:1px;
+        padding: 1rem;
+    }
+  
+   
