--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,11 +1,11 @@
 :root {
-    --main: rgba(3, 165, 194, 0.836);
+    --main: rgba(37, 124, 139, 0.836);
     --mainlight: rgb(17, 124, 185);
-    --headers: rgb(252, 250, 250);
+    --headers: rgb(255, 255, 255);
     --attention: #ac6305;
     --links: #e70e0e;
     --visited: #000000;
-    --text1: #f5efef;
+    --text1: #fcfcfc;
     --back: #035c97;
     --color3: rgb(0, 0, 0);
     --color7: rgb(13, 93, 133);
@@ -91,7 +91,7 @@ header .logo{
 
 header .logo img {
   max-width: 100%;
-  min-width: 50px;
+  min-width: 100px;
   grid-row:1/3;
   grid-column:1;
 }
@@ -109,11 +109,11 @@ header .logo img {
     margin-top: -.4rem;
 }
  .headings2{    
-    font-size: .8rem;
-    margin-top: -.4rem;
+    font-size: 1rem;
+    margin-top: 0rem;
  }
 .social{   
-    margin-left: .5rem;
+    margin-left: 1.5rem;
 }
 #facebook{
     grid-row:1;
@@ -138,7 +138,7 @@ text-align: center;
  }
 #hamburgerBtn{
 background-color: var(--headers);
-padding: 1.2em;
+padding: 1.0em;
 
 margin-left: .5rem;
 margin-right: .5rem;
@@ -149,11 +149,11 @@ margin-right: .5rem;
     grid-row: 3;
     grid-column: 1/6;
     text-align: center;
-    margin: 0 1rem ;
+    margin:  1rem ;
     padding: .2rem 0;
     background-color: var(--mainlight);
     color: var(--headers);
-    font-size: 1.0rem;
+    font-size: 1.5rem;
 }
 
 
@@ -169,6 +169,7 @@ margin-right: .5rem;
     display: block;
     grid-row: 3;
     grid-column: 1;
+    font-size: large;
 }
 .spot a:link{
 color: var(--main);
@@ -187,7 +188,8 @@ color: var(--main);
 footer{
     text-align: center;
     background-color: var(--mainlight);
-    font-size:90%;
+    font-size: large;
+    place-items: center;
     
 }
 
@@ -202,7 +204,7 @@ padding-top:.3rem;
 
 }
 footer .address{
-margin-top:-1rem;
+margin-top:0rem;
 }
 
 footer .address2{
@@ -210,10 +212,10 @@ margin-top:-1rem;
 }
 
 footer .phone{
-    margin-top:-1rem;
+    margin-top: 0rem;
 }
 footer .map{
-    margin-top:-1rem;
+    margin-top: 0rem;
 }
 footer .seperator {
     display: none;
@@ -225,7 +227,7 @@ footer .seperator {
 }
 
 .about > *{
-    margin-top:-1rem;
+    margin-top: 1rem;
     padding:0;
 }
 #last-update{
