--- a/lesson05/css/style.css
+++ b/lesson05/css/style.css
@@ -1,86 +1,80 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
-:root{
-    --buttonsize: 40px;
-}
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
 body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif sans-serif;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-family: Acme, Arial, sans-serif;
 }
 
 h1 {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 main {
-    margin: 0.5rem auto;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 0.5rem;
-    background-color: #bed;
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 95%;
+  margin: 0.5rem auto;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 0.5rem;
+  background-color: #bed;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 95%;
 }
 
 input,
 button {
-    padding: 0.35rem;
-    margin-left: 1rem;
-    font-size: 1.1rem;   
-}
-.delete{
-    background-image: url(../images/redx.jpg);
-    background-size: var(--buttonsize) var(--buttonsize);
-    height: var(--buttonsize);
-    width: var(--buttonsize);
+  padding: 0.35rem;
+  margin-left: 1rem;
+  font-size: 1.1rem;
 }
 
 input {
-    width: 200px;
+  width: 200px;
 }
 
 label {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
-
 .listcontainer {
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin: 1rem;
-    padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 1rem;
+  padding: 1rem;
 }
 
 .list {
-    margin: 0.2rem;
+  margin: 0.2rem;
 }
 
 ul {
-    margin: 1rem;
-    list-style: none;
+  margin: 1rem;
+  list-style: none;
 }
 
 li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
 }
 
+.delete {
+  color: red;
+  font-size: 1.2rem;
+  font-weight: 900;
+}
 @media only screen and (min-width: 32.5em) {
-    h1 {
-        font-size: 2rem;
-    }
+  h1 {
+    font-size: 2rem;
+  }
 
-    main {
-        width: 480px;
-    }
+  main {
+    width: 480px;
+  }
 }
