--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,203 +1,215 @@
-@media screen and (min-width: 931px)  {
-    a:link {
-        color: var(--headers);
-    }
-    a:visited {
-        color: var(--back);
-    }
-    
-    a.seen {
-        color: var(--back);
-    }
-  body{
-      max-width: 1400px ;
+@media only screen and (min-width: 64rem)  {
+  header {
+    grid-template-columns: 1fr 1fr 1fr;
   }
-    header {
-        display: grid;
-        grid-template-columns: .8fr 1.2fr 2fr .5fr .5fr;
-        grid-template-rows: repeat(3, auto);
-        font-size: large;
-        
-    }
-    .headings1 {
-        font-size: 1.28rem;
-        margin-top: 0rem;
-       
-    }
-    
-    .headings2 {
-        font-size: 1rem;
-        margin-top: -.8rem;
-    }
-    nav button {
-        display: none;
-    }
-    nav {
-        grid-row: 1;
-        grid-column: 3;
-        text-align: right;
-    }
-    nav ul{
-        display: flex;
-        grid-row:1;
-        grid-column: 3;
-        margin-left: 1rem;
-        font-size: 1.1rem;
-        
-    }
-    nav ul li a {
-       
-        padding: .8rem 2vw;
-        text-decoration: none;
-        color: #333;
-        color: var(--back);
-        border:none;
-        background-color: var(--main);
-    }
-   
-    #facebook {
-        grid-column: 4;  
-    }
-    
-    #instagram {
-       grid-column: 5;   
-    }
-    
-    .social img {
-        max-width: 50px;
-        border-radius: 15px;
-    }
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 3fr 1 fr;
-        grid-template-rows: repeat(3, auto);
-        column-gap: .1rem;
-    }
-
-    .hero {
-        grid-row: 1/3;
-        grid-column: 2;
-        font-size: large;
-    }
-
-    .event {
-        grid-row: 1;
-        grid-column: 1;
-        font-size: large;
-
-    }
-
-    .weather {
-        grid-row: 2;
-        grid-column: 1;
-    }
-
-    .news {
-        grid-row: 3;
-        grid-column: 2;
-        font-size: large;
-    }
-
-    .spotlight {
-        grid-row: 1/4;
-        grid-column: 3;        
-        display: flex;
-        flex-direction: column;
-    }
-    .join {
-        display: block;
-        grid-row: 3;
-        grid-column: 1;
-        font-size: large;
-    }
-    #spot3{
-        display: block;
-
-    }
-    .depot{
-        display: none;
-    }
-    footer {
-        text-align: center;
-        font-size: 125%;
-        display: grid;
-        grid-template-columns: .5fr 2fr 1.5fr;
-        column-gap: 10px;
-        margin-left: 1rem;
-        margin-right: 1rem;
-        place-items: center;
-    }
-    
-    footer>div {
-        margin: 0;
-        padding: 0;
-    }
-    
-    footer .logo {
-        grid-column: 1;
-        grid-row: 1/5;
-    
-    }
-    
-    footer .logo img {
-        max-width: 100%;
-        min-width: 100px;
-        margin-left: 1rem;
-    }
-    
-    .col2 {
-    
-        margin-top: 1rem;        
-        grid-column: 2;
-    
-    }
-    
-    .find-us {
-        grid-column: 3;
-        padding-top: 1rem;
-        text-align: right;
-        margin-right: 1rem;
-    }
-    
-    footer .seperator {
-        display: block;
-        color: var(--headers);
-    }
-#last-seperator {
-    display: block;
+  a:link {
+      color: var(--headers);
+  }
+  a:visited {
+      color: var(--back);
+  }
+  
+  a.seen {
+      color: var(--back);
+  }
+body{
+    max-width: 1400px ;
 }
-    .about {
-        margin-top: .5rem;
-        margin-bottom: 0;    
-        border-top: var(--headers) solid 1px;
-        text-align: center;
-        grid-column: 1/4;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
-    }
-    
-    .about>* {
-        margin-top: -.5rem;
-        padding-right: 1rem;
-        
-    }
-    
-    #last-update {
-       
-        padding-bottom: 0;
+  header {
+      display: grid;
+      grid-template-columns: .8fr 1.2fr 2fr .5fr .5fr;
+      grid-template-rows: repeat(3, auto);
+      font-size: 1.0rem;
       
+  }
+  .headings1 {
+      font-size: 1.28rem;
+      margin-top: 0rem;
+     
+  }
+  
+  .headings2 {
+      font-size: 1rem;
+      margin-top: -.8rem;
+  }
+  nav button {
+      display: none;
+  }
+  nav ul.open {
+    background-color: transparent;
+  }
+  nav {
+      grid-row: 1;
+      grid-column: 3;
+      text-align: right;
+  }
+  nav ul{
+      display: flex;
+      grid-row:1;
+      grid-column: 3;
+      margin-left: 1rem;
+      font-size: 1.1rem;
+      
+  }
+  nav ul li a {
+     
+      padding: .8rem 2vw;
+      text-decoration: none;
+      color: rgb(250, 250, 250);
+      color: var(--back);
+      border:none;
+      border-right: 1px solid rgba(8, 5, 5, 0.4);
+      background-color: var(--main);
+      padding: 1.0rem 1rem;
+  }
+ 
+  #facebook {
+      grid-column: 4;  
+  }
+  
+  #instagram {
+     grid-column: 5;   
+  }
+  
+  .social img {
+      max-width: 50px;
+      border-radius: 15px;
+  }
+  .container {
+      display: grid;
+      grid-template-columns: 1fr 3fr 1 fr;
+      grid-template-rows: repeat(3, auto);
+      column-gap: .1rem;
+  }
+
+  .hero {
+      grid-row: 1/3;
+      grid-column: 2;
+      font-size: 1.0rem;
+  }
+
+  .event {
+      grid-row: 1;
+      grid-column: 1;
+      font-size: 1.0rem;
+
+  }
+
+  .weather {
+      grid-row: 2;
+      grid-column: 1;
+  }
+
+  .news {
+      grid-row: 3;
+      grid-column: 2;
+      font-size: 1.0rem;
+  }
+
+  .spotlight {
+      grid-row: 1/4;
+      grid-column: 3;        
+      display: flex;
+      flex-direction: column;
+  }
+  .join {
+      display: block;
+      grid-row: 3;
+      grid-column: 1;
+      font-size: 1.0rem;
+  }
+  #spot3{
+      display: block;
+
+  }
+  .depot{
+      display: none;
+  }
+  footer {
+      text-align: center;
+      font-size: 125%;
+      display: grid;
+      grid-template-columns: .5fr 2fr 1.5fr;
+      column-gap: 10px;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      place-items: center;
+  }
+  
+  footer>div {
+      margin: 0;
+      padding: 0;
+  }
+  
+  footer .logo {
+      grid-column: 1;
+      grid-row: 1/5;
+  
+  }
+  
+  footer .logo img {
+      max-width: 100%;
+      min-width: 100px;
+      margin-left: 1rem;
+  }
+  
+  .col2 {
+  
+      margin-top: 1rem;        
+      grid-column: 2;
+  
+  }
+  
+  .find-us {
+      grid-column: 3;
+      padding-top: 1rem;
+      text-align: right;
+      margin-right: 1rem;
+  }
+  
+  footer .seperator {
+      display: block;
+      color: var(--headers);
+  }
+#last-seperator {
+  display: block;
+}
+  .about {
+      margin-top: .5rem;
+      margin-bottom: 0;    
+      border-top: var(--headers) solid 1px;
+      text-align: center;
+      grid-column: 1/4;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+  }
+  
+  .about>* {
+      margin-top: -.5rem;
+      padding-right: 1rem;
+      
+  }
+  
+  #last-update {
+     
+      padding-bottom: 0;
+      flex-basis: 25%;
+      text-align: left;
     
-    }
-    .discover{
-        
-        display: grid;
-        grid-template-columns: repeat(2, 300px);
-        grid-template-rows: repeat(auto, 200px);
-        column-gap: 1rem;     
-       
-    }
+  
+  }
+  #last-seperator{
+    display: block;
+  }
+  .discover{
+      
+      display: grid;
+      grid-template-columns: repeat(2, 300px);
+      grid-template-rows: repeat(auto, 200px);
+      column-gap: 1rem;     
+     
+  }
 
 }
-
