--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -77,7 +77,7 @@ body{
   }
   .container {
       display: grid;
-      grid-template-columns: 1fr 3fr 1 fr;
+      grid-template-columns: 1fr 3fr 1fr;
       grid-template-rows: repeat(3, auto);
       column-gap: .1rem;
   }
@@ -207,7 +207,7 @@ body{
       
       display: grid;
       grid-template-columns: repeat(2, 300px);
-      grid-template-rows: repeat(auto, 200px);
+      grid-template-rows: repeat(200px);
       column-gap: 1rem;     
      
   }
