--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -128,7 +128,7 @@ footer .seperator {
   
       display: grid;
       grid-template-columns: repeat(2, 300px);
-      grid-template-rows: repeat(auto, 200px);
+      grid-template-rows: repeat(200px);
       column-gap: 1rem;
   
   }
