--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -23,10 +23,12 @@
       text-align: right;
       margin-right: 1rem;
   }
-  .hero{
-      grid-row:1;
-      grid-column: 1/4;
-      font-size: 1.0rem;
+  .hero {
+    grid-column: 1/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .event{
       grid-row:5;
@@ -44,18 +46,24 @@
       font-size: 1.0rem;
   }
 
-  .spotlight{
-      grid-row: 3;
-      grid-column: 1/4;;
-          display: flex;
-          flex-direction: row;
-      }
+  .spotlight {
+    grid-column: 1/3;
+    grid-row: 3;
+    display: flex;
+    border: 1px solid black;
+  }
+  .spotlight > div {
+    min-width: 40vw;
+  }
 
   .join {
       display: block;
       visibility: visible;
       grid-row: 4;
       grid-column: 1/4;
+      }
+      .join > button {
+        margin: 0.5em;
       }
 
 footer {
