--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -47,8 +47,8 @@
   }
 
   .spotlight {
-    grid-column: 1/3;
-    grid-row: 3;
+    grid-column: 2/3;
+    grid-row: 1;
     display: flex;
     border: 1px solid black;
   }
@@ -124,7 +124,8 @@ footer .seperator {
 }
 
 #last-update {
-  padding-bottom: 0;
+  padding-bottom: 1;
+  font-size: 1.0rem;
   flex-basis: 100%;
   text-align: center;
   
@@ -141,5 +142,3 @@ footer .seperator {
   
   }
 }
-
-
