--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -24,36 +24,46 @@
       margin-right: 1rem;
   }
   .hero {
+    min-width: 40vw;
     grid-column: 1/3;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 0.2em solid var(--color4);
   }
   .event{
+    min-width: 20vw;
       grid-row:5;
       grid-column: 1/3;
       font-size: 1.0rem;
+      border: 0.2em solid var(--color4);
   }
+
   .weather{
       grid-row: 5;
       grid-column: 3;
+      border: 0.2em solid var(--color4);
+
   }
 
   .news{
       grid-row:2;
       grid-column: 1/4;
       font-size: 1.0rem;
+      border: 0.2em solid var(--color4);
+      text-align: center;
   }
 
   .spotlight {
     grid-column: 2/3;
     grid-row: 1;
     display: flex;
-    border: 1px solid black;
+    border: 0.2em solid var(--color4);
   }
   .spotlight > div {
-    min-width: 40vw;
+    min-width: 20vw;
+    min-height: 10vw;
   }
 
   .join {
@@ -61,17 +71,19 @@
       visibility: visible;
       grid-row: 4;
       grid-column: 1/4;
+      border: 0.2em solid var(--color4);
       }
       .join > button {
         margin: 0.5em;
       }
 
 footer {
-  text-align: center;    
-  font-size: 0.8rem;
+  min-width: 50vw;
+  text-align: left;    
+  font-size: 0.2rem;
   display: grid;    
   grid-template-columns: .5fr 2fr 1.5fr;    
-  column-gap: 10px;
+  column-gap: 2px;
   margin-left: 1rem;
   margin-right: 1rem;
 }
@@ -85,7 +97,6 @@ footer .logo  {
  
 }
 footer .logo img {
-  max-width: 70%;
   min-width: 100px;
   margin-left: 1rem;
 }
