--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,34 +1,39 @@
 :root {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    --main: rgba(25, 122, 139, 0.836);
-    --mainlight: rgb(11, 108, 156);
-    --headers: rgb(255, 255, 255);
-    --attention: #ffffff;
-    --links: #ffffff;
-    --visited: #ffffff;
-    --text1: #ffffff;
-    --back: #044169;
-    --color3: rgb(255, 247, 247);
-    --color7: rgb(2, 1, 1);
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  --main: rgba(26, 106, 121, 0.836);
+  --mainlight: rgb(11, 108, 156);
+  --headers: rgb(255, 255, 255);
+  --attention: #ffffff;
+  --links: #ffffff;
+  --visited: #ffffff;
+  --text1: #ffffff;
+  --back: #044169;
+  --color1: #f0ece2;
+  --color2: #dfd3c3;
+  --color3: #c7b198;
+  --color4: #596e79;
+  --color5: #ffffff;
+  --color6: #030001;
 
-    color: var(--text1);
+  color: var(--text1);
 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    --nav-link-color: var(--attention);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  --nav-link-color: var(--attention);
 }
+
 
 
 a:link {
-    color: var(--attention);
+  color: var(--color6);
 }
 
 a:visited {
-    color: var(--headers);
+  color: var(--headers);
 }
 
 a.seen {
-    color: var(--headers);
+  color: var(--headers);
 }
 
 h1,
@@ -37,190 +42,192 @@ h3,
 h4,
 h5,
 h6 {
-    color: var(--headers);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, 'Times New Roman', Times, serif;
+  color: var(--headers);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, 'Times New Roman', Times, serif;
 
 }
 
 body {
-    background-color: var(--main);
-    margin: 2em;
+  background-color: var(--main);
+  margin: 2em;
 }
 
 
 nav ul {
-    color: white;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  color: white;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 nav ul li a {
-    display: block;
-    padding: .8rem 2vw;
-    text-decoration: none;
-    color: rgb(197, 12, 12);
-    border-top: 1px solid rgba(0, 0, 0, 0.5);
-    background-color: var(--color7);
+  display: block;
+  padding: .8rem 2vw;
+  text-decoration: none;
+  color: rgb(197, 12, 12);
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+  background-color: var(--color7);
 }
 nav ul li a:hover {  
-    background-color: var(--color3);
+  background-color: var(--color2);
 }
 
 
 nav ul {
-    display: none;
+  display: none;
 }
 
 nav ul.open {
-    display: block;
+  display: block;
 }
 
-/*------------------------------------*/
+
 header footer{
-    margin-left: .2rem;
-    margin-right: .2rem;
+  margin-left: .2rem;
+  margin-right: .2rem;
 }
 header{
-    display: grid;
-    margin-left: 2rem;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, auto);    
-    
+  display: grid;
+  margin-left: 2rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, auto);    
+  
 }
 
 .logo{
-   margin-left: 1rem;
+ margin-left: 1rem;
 }
 
 .logo img {
-  max-width: 190px;
-  grid-row:2/3;
-  grid-column:1;
+max-width: 180px;
+grid-row: 1/3;
+grid-column: 1;
 }
 
 .headings{
-    grid-row:1/3;
-    grid-column: 2;
-    font-size: 2.5em;
-    margin-left: 1rem;
-    margin-top: 5rem;
-    display: flex;
-    flex-direction: column;
+  grid-row: 1/3;
+  grid-column: 2;
+  font-size: 2.5em;
+  margin-left: 1rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
 }
 .headings1 {
-    font-size: 0.5rem;
-    margin-top: -.4rem;
+  font-size: 0.5rem;
+  margin-top: -.4rem;
 }
- .headings2{    
-    font-size: 0.5rem;
-    margin-top: 0rem;
- }
+.headings2{    
+  font-size: 0.3rem;
+  margin-top: 0rem;
+}
 .social{   
-    margin-left: 1.5rem;
+  margin-left: 1.5rem;
 }
 #facebook{
-    grid-row:1;
-    grid-column: 3;
-    margin-left: .5rem;
-    text-align: right;
+  grid-row:1;
+  grid-column: 3;
+  margin-left: .5rem;
+  text-align: right;
 }
 #instagram{
-    grid-row:1;
-    grid-column: 4;
-    margin-left: .5rem;
-    text-align: left;
+  grid-row:1;
+  grid-column: 4;
+  margin-left: .5rem;
+  text-align: left;
 }
- .social img{        
-     max-width: 40px;
-    border-radius: 15px;
- }
- nav{
+.social img{        
+   max-width: 40px;
+  border-radius: 15px;
+}
+nav{
 grid-row:1;
 grid-column: 5;
 text-align: center;
- }
+}
 #hamburgerBtn{
-background-color: var(--headers);
+background-color: var(--color4);
 padding: 1.0em;
-
 margin-left: .5rem;
 margin-right: .5rem;
 
 }
 
 .headerDate{
-    grid-row: 3;
-    grid-column: 1/6;
-    text-align: center;
-    margin:  1rem ;
-    padding: .2rem 0;
-    background-color: var(--mainlight);
-    color: var(--headers);
-    font-size: 1.2rem;
-    max-width: 100%
+  grid-row: 3;
+  grid-column: 1/6;
+  text-align: center;
+  margin:  1rem ;
+  padding: .2rem 0;
+  background-color: var(--back);
+  color: var(--attention);
+  font-size: 1.2rem;
+  max-width: 100vw
 }
 .container div {
-    background-color: var(--back);
-    padding: .5rem;  
-  
-    margin: 1rem;
+  background-color: var(--back);
+  padding: .5rem;  
+
+  margin: 1rem;
 }
 .attention button {
-    display: none;
-  }
-  .attention button.show {
-    display: inline-block;
-    margin: 0.5em;
-  }
-  .attention {
-    border: none;
-    text-align: center;
-  }
+  display: none;
+}
+.attention button.show {
+  display: inline-block;
+  margin: 0.5em;
+}
+.attention {
+  border: none;
+  text-align: center;
+}
 
-  .join {
-    display: none;
+.join {
+  display: none;
+}
+.join button {
+  background-color: var(--color1);
+  color: var(--color5);
+  font-size: 2rem;
+  border-radius: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  padding: 1rem;
+  box-shadow: 10px 5px 5px rgb(124, 121, 121);
+} 
+.spot img{
+  max-width: 100%;
+}  
+.spot a:link{
+  color: var(--color3);
   }
-  .join button {
-    background-color: var(--mainlight);
-    color: var(--color6);
-    font-size: 2rem;
-    border-radius: 15px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    padding: 1rem;
-    box-shadow: 10px 5px 5px rgb(124, 121, 121);
-  }   
-  .spot a:link{
-    color: var(--main);
+  .spot a:visited {
+      color: var(--color7);
+  }
+  .spotlight > div {
+      max-width: 1vw;
+      border: 0.1em solid var(--color4);
+      margin: 1vh;
+      padding: 1vh;
+      text-align: center;
     }
-    .spot a:visited {
-        color: var(--main);
-    }
-    .spotlight > div {
-        min-width: 15vw;
-        border: 0.2em solid var(--color4);
-        margin: 1vh;
-        padding: 2vh;
-        text-align: center;
-      }
-    .spot a:hover {
-        background-color: var(--headers);
-    }
-    
-    #spot3{
-        display: none;
-    }
+  .spot a:hover {
+      background-color: var(--color4);
+  }
+  
+  #spot3{
+      display: none;
+  }
 footer{
-    text-align: center;
-    background-color: var(--mainlight);
-    font-size: 1.0rem;
-    place-items: center;
-    
+  text-align: center;
+  background-color: var(--back);
+  font-size: 1.0rem;
+  place-items: center;
+  
 }
 
 footer .logo img{
-    max-width: 100px;
-    margin-left: 1rem;
+  max-width: 100px;
+  margin-left: 1rem;
 }
 footer .logo-label{
 margin-left:-2.0rem;
@@ -237,40 +244,39 @@ margin-top:-1rem;
 }
 
 footer .phone{
-    margin-top: 0rem;
-    font-size: 1.0rem;
+  margin-top: 0rem;
+  font-size: 1.0rem;
 }
 footer .map{
-    margin-top: 0rem;
-    font-size: 1.0rem;
+  margin-top: 0rem;
+  font-size: 1.0rem;
 }
 footer .seperator {
-    display: none;
+  display: none;
 }
 .about{
-    padding-top: 1.0rem;
-    border-top: var(--headers) solid 1px;
-    margin: 0,1rem;
+  padding-top: 1.0rem;
+  border-top: var(--headers) solid 1px;
+  margin: 0,1rem;
 }
 
 .about > *{
-    margin-top: 1rem;
-    padding:0;
+  margin-top: 1rem;
+  padding:0;
 }
 #last-update{
-    padding-bottom: .5rem;
-    font-size: 0.8rem;
+  padding-bottom: .5rem;
+  font-size: 0.8rem;
 }
-    .discover{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .discoverImg{
-        width: 300px;
-        height: 180px;
-        margin:1px;
-        padding: 1rem;
-    }
-  
+  .discover{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  .discoverImg{
+      width: 300px;
+      height: 180px;
+      margin:1px;
+      padding: 1rem;
+  }
