--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -87,17 +87,16 @@
     }
   
     .hero {
-        grid-row: 1/3;
         grid-column: 2;
-        font-size: 1.0rem;
-    }
-    .hero > img {
-      max-width: none;
-      width: 100%;
-      height: 100%;
-      object-fit: none;
-      overflow: hidden;
-    }
+        grid-row: 1/3;
+      }
+      .hero > img {
+        max-width: none;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+      }
   
     .event {
         grid-row: 1;
@@ -138,26 +137,20 @@
         display: none;
     }
     footer {
-        text-align: left;
-        font-size: 1.5rem;
-        display: grid;
-        grid-template-columns: .5fr 2fr 1.5fr;
-        column-gap: 10px;
-        margin-left: -1rem;
-        margin-right: -1rem;
-        place-items: left;
-    }
+        grid-template-columns: 1fr 2fr 1fr;
+        max-height: 150px;
+        margin: 0.5rem 0;
+        padding-top: 0.5em;
+      }
     
-    footer>div {
-        margin: 0;
-        padding: 1;
-    }
-    
-    footer .logo {
-        grid-column: 1;
-        grid-row: 1/5;
-    
-    }
+      .footer-logo {
+        grid-column: 1/3;
+      }
+      .footer-logo > img {
+        height: 80px;
+        max-width: 80px;
+        display: block;
+      }
     
     footer .logo img {
         max-width: 200px;
@@ -172,19 +165,21 @@
     }
     
     .find-us {
-        grid-column: 2;
-        padding-top: 1rem;
-        text-align: right;
-        margin-right: 1rem;
-    }
-    
-    footer .seperator {
+        grid-column: 3;
+        text-align: center;
+        font-size: 1rem;
+      }
+      .about {
+        padding-top: 0.8em;
+      }
+      #last-update {
+        padding-bottom: 0;
+        flex-basis: 25%;
+        text-align: left;
+      }
+      #last-seperator {
         display: block;
-        color: var(--headers);
-    }
-  #last-seperator {
-    display: block;
-  }
+      }
     .about {
         margin-top: .5rem;
         margin-bottom: 0;    
@@ -218,7 +213,7 @@
         
         display: grid;
         grid-template-columns: repeat(2, 300px);
-        grid-template-rows: repeat(200px);
+        grid-template-rows: 200px;
         column-gap: 1rem;     
        
     }
