--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -2,10 +2,10 @@
   .logo {
     margin-left: 1vw;
   }
-  .container{
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          grid-template-rows: repeat(5, auto);
+  .logo-container{
+    height: 60px;
+    max-width: 60px;
+    display: block;
       }
   header .logo img {       
       min-width: 50px;        
@@ -23,21 +23,15 @@
       text-align: right;
       margin-right: 1rem;
   }
-  .hero {
-    min-width: 40vw;
-    grid-column: 1/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 0.2em solid var(--color4);
-  }
-  .event{
-    min-width: 20vw;
-      grid-row:5;
+    .hero {
       grid-column: 1/3;
-      font-size: 1.0rem;
-      border: 0.2em solid var(--color4);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  .event {
+    display: inline-block;
   }
 
   .weather{
@@ -52,103 +46,82 @@
       grid-column: 1/4;
       font-size: 1.0rem;
       border: 0.2em solid var(--color4);
-      text-align: center;
+      text-align: left;
   }
 
   .spotlight {
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 1;
     display: flex;
     border: 0.2em solid var(--color4);
   }
   .spotlight > div {
-    min-width: 20vw;
-    min-height: 10vw;
+    min-width: 10vw;
+    min-height: 5vw;
   }
 
   .join {
-      display: block;
-      visibility: visible;
-      grid-row: 4;
-      grid-column: 1/4;
-      border: 0.2em solid var(--color4);
-      }
+    display: flex;
+    grid-column: 1/3;
+    grid-row: 4;
+    align-items: center;
+  }
       .join > button {
         margin: 0.5em;
       }
 
-footer {
-  min-width: 50vw;
-  text-align: left;    
-  font-size: 0.2rem;
-  display: grid;    
-  grid-template-columns: .5fr 2fr 1.5fr;    
-  column-gap: 2px;
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-footer >div{
-  margin:0;
-  padding:0;
-}
-footer .logo  {    
-  grid-column: 1;
-  grid-row: 1/5;
- 
-}
-footer .logo img {
-  min-width: 100px;
-  margin-left: 1rem;
-}
-.col2{
-  
-  margin-top: 1rem;;
-  grid-column: 2;
-  
-}
-.find-us{    
-  grid-column: 3;
- padding-top: 1rem;
-}
-
-footer .seperator {
-  display: block;
-  color: var(--headers);
-}
-
-
-.about {
-  margin-top:1rem;
-  margin-bottom: 0;    
-  border-top: var(--headers) solid 1px;    
-  grid-column: 1/4;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.about>* {
-  margin-top: -.5rem;
-  padding-right: 1rem;
- 
-}
-
-#last-update {
-  padding-bottom: 1;
-  font-size: 1.0rem;
-  flex-basis: 100%;
-  text-align: center;
-  
-}
-#last-seperator {
-  display: none;
-}
+      footer {
+        text-align: left;
+        font-size: 100%;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 10px;
+      }
+      footer > div {
+        margin: 0;
+        padding: 0.5rem;
+      }
+      .footer-logo {
+        display: flex;
+      }
+      #footer-address {
+        padding-left: 1em;
+      }
+      .email {
+        margin-top: 0.5em;
+      }
+      footer .seperator {
+        display: block;
+      }
+    
+      .about {
+        margin-top: 0;
+        margin-bottom: 0;
+        border-top: var(--color1) solid 1px;
+        grid-column: 1/4;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    
+      .about > * {
+        margin-top: -0.5rem;
+        padding-right: 1rem;
+      }
+    
+      #last-update {
+        padding-bottom: 0;
+        flex-basis: 100%;
+        text-align: center;
+      }
+      #last-seperator {
+        display: none;
+      }
   .discover {
   
       display: grid;
       grid-template-columns: repeat(2, 300px);
-      grid-template-rows: repeat(200px);
       column-gap: 1rem;
   
   }
