Updated Discover page fix

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -252,67 +252,71 @@ margin-right: .5rem;
 #spot3 {
   display: none;
 }
-footer{
-  text-align: center;
+footer {
   background-color: var(--back);
-  font-size: 0.8rem;
-  place-items: center;
-  
+  color: var(--attention);
+  text-align: center;
+  margin: 1vh;
+  padding: 2vh;
 }
-footer .logo img{
-  max-width: 100px;
-  margin-left: 1rem;
+
+footer .address {
+  margin-top: -1rem;
 }
-footer .logo-label{
-margin-left:-2.0rem;
-padding-top:.3rem;
+footer .address1 {
+  margin-top: -1rem;
 }
-footer .address{
-margin-left:-2.0rem;
-font-size: 1.2rem;
+
+footer .address2 {
+  margin-top: -1rem;
 }
-footer .address2{
-margin-top:-1rem;
+
+footer .phone {
+  margin-top: -1rem;
 }
-footer .phone{
-  margin-top: 0rem;
-  font-size: 1.0rem;
+.map {
+  margin-top: -1rem;
 }
-footer .map{
-  margin-top: 0rem;
-  font-size: 1.0rem;
+footer .map a {
+  text-decoration: none;
+  color: var(--color5);
+}
+footer hr {
+  padding: 2vh;
+  background-color: var(--color5);
 }
 footer .seperator {
   display: none;
 }
-.about{
-  padding-top: 1.0rem;
-  border-top: var(--headers) solid 1px;
-  margin: 0.1rem;
+.about {
+  padding-top: 1.3rem;
+  border-top: var(--color1) solid 1px;
+  margin: 1rem;
 }
 
-.about > *{
-  margin-top: 1rem;
-  padding:0;
+.about > * {
+  margin-top: -1rem;
+  padding: 0;
 }
-#last-update{
-  padding-bottom: .5rem;
-  font-size: 0.8rem;
+#last-update {
+  padding-bottom: 0.9rem;
 }
 .discover-header {
-  display: block;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .discover img {
-  display: flex;
-  align-content: center;
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 60%;
 }
 .card {
-  box-shadow: 0 4px 8px 0 rgb(209, 192, 192);
+  box-shadow: 0 4px 8px 0 rgb(119, 117, 117);
   transition: 0.3s;
   overflow: hidden;
-  margin: 2%;
+  margin: 8%;
 }
 .caption {
   font-size: 1.2rem;
@@ -323,7 +327,7 @@ footer .seperator {
 }
 .fact {
   font-size: 1.2rem;
-  padding: 1rem;
+  padding: 5rem;
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, san-serif;
 }
