Updated per Brother Blazzard feedback on file

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -136,3 +136,17 @@
     
     }
   }
+
+.joinPage {
+  display: block;
+  margin: 0 auto;
+}
+
+form fieldset {
+  max-width: 650px;
+
+}
+
+form label.top input, form label.top select form, label.textArea #describe{
+  max-width: 500px;
+}
