--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,64 @@
 @media only screen and (min-width: 64rem)  {
+    form fieldset {
+        max-width: 800px;
+        
+    }
+    form label.top input, form label.top select form, label.textArea #describe{
+        max-width: 750px;
+    }
+
+    form label.sbs {
+        padding: .4rem 0;
+    }
+
+    fieldset.memLvl {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+    }
+
+    /*NP - label*/
+    form fieldset label.sbs:nth-child(2){
+        grid-column: 1;
+        grid-row: 1;
+    }
+    /*Bronze - label*/
+    form fieldset label.sbs:nth-child(4){
+        grid-column: 1;
+        grid-row: 2;
+    }
+    /*silver - label*/
+    form fieldset label.sbs:nth-child(6){
+        grid-column: 1;
+        grid-row: 3;
+    }
+    /*Gold - label*/
+    form fieldset label.sbs:nth-child(8){
+        grid-column: 1;
+        grid-row: 4;
+    }
+
+    /*NP - P*/
+    form fieldset p.sbs:nth-child(3){
+        grid-column: 2/4;
+        grid-row: 1;
+        margin-top: -10px;
+    }
+    form fieldset p.sbs:nth-child(5){
+        grid-column: 2/4;
+        grid-row: 2;
+        margin-top: -10px;
+    }
+    form fieldset p.sbs:nth-child(7){
+        grid-column: 2/4;
+        grid-row: 3;
+        margin-top: -10px;
+    }
+    form fieldset p.sbs:nth-child(9){
+        grid-column: 2/4;
+        grid-row: 4;
+        margin-top: -10px;
+    }
     header {
       grid-template-columns: 1fr 1fr 1fr;
     }
