Updated for Week09 Directory

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -218,4 +218,17 @@
     .card:hover {
         box-shadow: 0 8px 16px 0 rgb(71, 70, 70);
       }
+    /*directory*/
+
+
+
+.list section h2 {
+    display: block;
+    font-size: 14px;
+}
+.list section h4,h5,h6,p {
+    display: block;
+    font-size: 14px;
+}
+
 }
