--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -142,3 +142,43 @@ form fieldset {
 form label.top input, form label.top select form, label.textArea #describe{
   max-width: 500px;
 }
+
+ /*directory*/
+  
+ div.cards section:hover {
+  box-shadow: 0px 0px 5px 5px #5C0029;
+} 
+
+
+.list section {
+  flex-direction: row;
+}
+
+.list section h2 {
+  display: block;
+  font-size: 13px;
+
+}
+.list section p {
+  display: block;
+
+}
+.list section img {
+  margin-top: 0px;
+  max-width: 70px;
+}
+.list section h4 {
+  font-size: 13px;
+  font-weight: bold;
+}
+.list section h3,h5,h6,p {
+  font-size: 12px;
+}
+.grid section h4 {
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.grid section img {
+  max-height: 70px;
+}
