Fixed parsing error

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -432,7 +432,7 @@ footer .seperator {
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, san-serif;
 }
-*directory*/
+/*directory*/
 .buttons {
     display: flex;
     justify-content: center;
