Updated for Weather API

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -106,8 +106,23 @@
     }
   
     .weather {
-        grid-row: 2;
+        margin: 10px 0px;
         grid-column: 1;
+        grid-row: 2;
+        height: 300px;
+    }
+    
+    .weather img {
+        max-width: 100px;
+        width: 100px;
+        position: absolute;
+        top: 70px;
+        left: 30px;
+        
+    }
+    
+    .weather h4{
+        font-size: 25px;
     }
   
     .news {
