--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -34,12 +34,26 @@
     display: inline-block;
   }
 
-  .weather{
-      grid-row: 5;
-      grid-column: 3;
-      border: 0.2em solid var(--color4);
-
-  }
+  .weather {margin: 10px 0px 10px 10px; 
+    grid-column: 3;
+    grid-row: 5;
+}   
+.weather h3{
+grid-column: 3/3;
+grid-row: 2/3;
+text-align: center;
+margin:0;
+padding:10px;
+margin-right: 0px;
+}
+.weather img {
+    max-width: 100px;
+    width: 80px;
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    
+}
 
   .news{
       grid-row:2;
