--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -323,6 +323,54 @@ margin-right: .5rem;
 .news p {
   margin-top: 0.2em;
 }
+.weather {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  position: relative;
+  text-align: center;
+  max-width: 600px; 
+  height: 200px;   
+}
+
+.weather h2{
+  grid-column: 2/4;
+  grid-row: 1/1;
+  text-align: center;
+  margin:0;
+  padding:10px;
+}
+.weather h3{
+  grid-column: 2/3;
+  grid-row: 1/3;
+  text-align: center;
+  margin:0;
+  padding:10px;
+  margin-right: 50px;
+}
+.weather h4{
+  grid-column: 3/3;
+  grid-row: 2/3;
+  text-align: left;
+  margin:0;
+  padding:10px;
+  margin-right: 50px;
+}
+.weather p{
+  grid-column: 2/4;
+  grid-row: 4/4;
+  text-align: center;
+  margin:0;
+  padding:1;
+}
+
+.weather img {
+  max-width: 100px;
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  
+}
 .spot {
   height: 600px;
   padding: 0px;
