--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -248,36 +248,18 @@ grid-column: 1;
    max-width: 40px;
   border-radius: 15px;
 }
-nav ul {
-  color: white;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+nav{
+grid-row:1;
+grid-column: 5;
+text-align: center;
 }
+#hamburgerBtn{
+background-color: var(--color4);
+padding: 1.0em;
+margin-left: .5rem;
+margin-right: .5rem;
 
-nav ul li a {
-  display: block;
-  padding: .8rem 2vw;
-  text-decoration: none;
-  color: rgb(197, 12, 12);
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
-  background-color: var(--color7);
 }
-nav ul li a:hover {  
-  background-color: var(--color2);
-}
-
-
-nav ul {
-  display: none;
-}
-
-nav ul.open {
-  display: block;
-  background-color: var(--color6);
-  
-}
-
 
 .headerDate{
   grid-row: 3;
