--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,5 +1,4 @@
 @media only screen and (min-width: 64rem)  {
-    
     header {
       grid-template-columns: 1fr 1fr 1fr;
     }
@@ -33,56 +32,35 @@
         font-size: 1rem;
         margin-top: -.8rem;
     }
-    nav ul {
-        display: flex;}
+    nav button {
+        display: none;
+    }
+    nav ul.open {
+      background-color: transparent;
+    }
+    nav {
+        grid-row: 1;
+        grid-column: 3;
+        text-align: right;
+    }
+    nav ul{
+        display: flex;
+        grid-row:1;
+        grid-column: 3;
+        margin-left: 1rem;
+        font-size: 1.1rem;
         
-        .dropDownNav {
-            display: none;
-        }
-    
-    
-        #mainNav {
-            max-width: 600px;
-            display: flex;
-            
-        }
-    
-        #mainNav ul {
-            list-style-type: none;
-            padding-left: 0;
-            margin: auto;
-        }
-    
-        #mainNav ul li a{
-            padding: .8rem 2vw;
-            flex: 0 0 auto;
-            text-decoration: none;
-            color: white;
-            
-        }
-    
-        #mainNav ul li a:hover {
-            color: #5C0029;
-        }
-    
-    
-        #hamburgerBtn {
-            display: none;
-        }
-    
-    
-    main {
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        max-width: 1200px;
-        margin: 0 auto;
-        
-        }
-    main div {
-        color: white;
-        margin: 10px;
-        padding: 10px;
-    
+    }
+    nav ul li a {
+       
+        padding: .8rem 2vw;
+        text-decoration: none;
+        color: rgb(250, 250, 250);
+        color: var(--back);
+        border:none;
+        border-right: 1px solid rgba(8, 5, 5, 0.4);
+        background-color: var(--main);
+        padding: 1.0rem 1rem;
     }
    
     #facebook {
@@ -255,9 +233,9 @@
     .card:hover {
         box-shadow: 0 8px 16px 0 rgb(71, 70, 70);
       }
-    /*directory*/
-
-
+    
+    
+/*directory*/
 
 .list section h2 {
     display: block;
