--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -23,17 +23,13 @@
       text-align: right;
       margin-right: 1rem;
   }
-  .hero {
-    grid-column: span 3;
-    margin: 10px 0px;
-    grid-row: 1;
-}
-
-  .news {margin: 10px 0px;
-    grid-column: span 3;
-    grid-row: 2;
-    max-width: 1000px;
-}
+    .hero {
+      grid-column: 1/3;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
   .event {
     display: inline-block;
   }
