--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,40 +1,28 @@
-@media only screen and (min-width: 35rem) {
-  .logo {
-    margin-left: 1vw;
-  }
-  .logo-container{
-    height: 60px;
-    max-width: 60px;
-    display: block;
-      }
-  header .logo img {       
-      min-width: 50px;        
-  }
-  .headings1{
-      font-size: 1rem;
-      text-align: left;
-  }
-  .headings2{
-      font-size: 1rem;
-      margin-top: 0rem;
-  }
-  #hamburgerBtn {
-    color:black;
-      text-align: right;
-      margin-right: 1rem;
-  }
+@media only screen and (min-width: 36rem) {
+
+  main {display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    }
+
     .hero {
-      grid-column: 1/3;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      grid-column: span 3;
+      margin: 10px 0px;
+      grid-row: 1;
   }
-  .event {
-    display: inline-block;
+  .news {
+    margin: 10px 0px;
+    grid-column: span 3;
+    grid-row: 2;
+    max-width: 1000px;
+}
+.event {
+  margin: 10px 10px 10px 0px;
+  grid-column: span 2;
+  grid-row: 5;
   }
 
-  .weather {margin: 10px 0px 10px 10px; 
+  .weather {
+    margin: 10px 0px 10px 10px; 
     grid-column: 3;
     grid-row: 5;
 }   
@@ -139,9 +127,8 @@ margin-right: 0px;
         display: grid;
         grid-template-columns: repeat(2, 300px);
         column-gap: 2rem;
-    
-    }
-  }
+        box-shadow: 0px 0px 5px 5px #5c5759;
+  } 
 
 .joinPage {
   display: block;
@@ -160,7 +147,7 @@ form label.top input, form label.top select form, label.textArea #describe{
  /*directory*/
   
  div.cards section:hover {
-  box-shadow: 0px 0px 5px 5px #5C0029;
+  box-shadow: 0px 0px 5px 5px #989395;
 } 
 
 
@@ -195,4 +182,6 @@ form label.top input, form label.top select form, label.textArea #describe{
 
 .grid section img {
   max-height: 70px;
+
+}
 }
