--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -15,12 +15,17 @@
   --color4: #596e79;
   --color5: #ffffff;
   --color6: #030001;
-
-  color: var(--text1);
-
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  --nav-link-color: var(--attention);
 }
+body {
+  max-width: 1000px;
+  color: var(--attention);
+  font-family: Cambria, Cochin;
+  font-size: 16px;
+  text-align: center;
+  margin: 10px auto;
+
+}
+  
 
 /*------ FORM ------*/
 
@@ -129,7 +134,7 @@ h4,
 h5,
 h6 {
   color: var(--headers);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, 'Times New Roman', Times, serif;
+  font-family: Cambria, Cochin;
 
 }
 
@@ -146,14 +151,7 @@ nav ul {
   margin: 0;
 }
 
-nav ul li a {
-  display: block;
-  padding: .8rem 2vw;
-  text-decoration: none;
-  color: rgb(197, 12, 12);
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
-  background-color: var(--color7);
-}
+
 nav ul li a:hover {  
   background-color: var(--color2);
 }
@@ -185,7 +183,7 @@ header{
 }
 
 .logo img {
-max-width: 180px;
+max-width: 100px;
 grid-row: 1/3;
 grid-column: 1;
 }
@@ -233,13 +231,13 @@ grid-column: 1;
   margin-left: 1.5rem;
 }
 #facebook{
-  grid-row:1;
+  grid-row:2;
   grid-column: 3;
   margin-left: .5rem;
   text-align: right;
 }
 #instagram{
-  grid-row:1;
+  grid-row:2;
   grid-column: 4;
   margin-left: .5rem;
   text-align: left;
@@ -324,9 +322,7 @@ margin-right: .5rem;
   margin-top: 0.2em;
 }
 .weather {
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+  display: block;
   position: relative;
   text-align: center;
   max-width: 600px; 
@@ -341,8 +337,8 @@ margin-right: .5rem;
   padding:10px;
 }
 .weather h3{
-  grid-column: 2/3;
-  grid-row: 1/3;
+  grid-column: 3/3;
+  grid-row: 3/3;
   text-align: center;
   margin:0;
   padding:10px;
@@ -357,18 +353,19 @@ margin-right: .5rem;
   margin-right: 50px;
 }
 .weather p{
-  grid-column: 2/4;
+  grid-column: 4/4;
   grid-row: 4/4;
   text-align: center;
   margin:0;
-  padding:1;
+  padding: 5px;;
 }
 
 .weather img {
-  max-width: 100px;
+  max-width: 80px;
   position: absolute;
-  top: 50px;
-  left: 100px;
+  top: 40px;
+  left: 80px;
+  right: 80px;
   
 }
 .spot {
@@ -376,10 +373,11 @@ margin-right: .5rem;
   padding: 0px;
   margin: 10px auto;
   text-align: center;
-  max-width: 100px;
+  max-width: 1000px;
 }
+
 .spot img{
-  max-width: 100%;
+  max-width: 80%;
 }  
 .spot a:link{
   color: var(--color3);
@@ -387,19 +385,16 @@ margin-right: .5rem;
   .spot a:visited {
       color: var(--color7);
   }
-  .spotlight > div {
-      max-width: 1vw;
-      border: 0.1em solid var(--color4);
-      margin: 1vh;
-      padding: 1vh;
-      text-align: center;
-    }
+  
   .spot a:hover {
       background-color: var(--color4);
   }
 
 #spot3 {
   display: none;
+}
+footer div img {
+	width: 105px;
 }
 footer {
   background-color: var(--back);
@@ -458,7 +453,7 @@ footer .seperator {
 }
 .discover img {
   margin: 0;
-  padding: 0;
+  padding: 5px;
   width: 60%;
 }
 .card {
@@ -472,15 +467,16 @@ footer .seperator {
   padding: 1rem;
   text-align: center;
   margin-top: 2%;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, serif;;
+  font-family: Cambria, Cochin;
 }
 .fact {
   font-size: 1.2rem;
   padding: 5rem;
   text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, san-serif;
+  font-family: Cambria, Cochin;
 }
 /*directory*/
+
 .buttons {
     display: flex;
     justify-content: center;
