--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -2,7 +2,6 @@
     header {
       grid-template-columns: 1fr 1fr 1fr;
     }
-    
     a:link {
         color: var(--headers);
     }
@@ -22,12 +21,6 @@
         grid-template-rows: repeat(3, auto);
         font-size: 1.0rem;
         
-    }
-    .headerLogo {
-        width: 180px;
-        margin-right: 10px;
-        margin-left: 10px;
-        margin-top: 10px;
     }
     .headings1 {
         font-size: 1.28rem;
@@ -100,7 +93,7 @@
       .hero > img {
         max-width: none;
         width: 100%;
-        height: 5%;
+        height: 100%;
         object-fit: cover;
         overflow: hidden;
       }
@@ -133,7 +126,6 @@
     }
   
     .news {
-        margin: 0 10px;
         grid-row: 3;
         grid-column: 2;
         font-size: 1.0rem;
@@ -235,17 +227,15 @@
     }
     
     .discover {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-template-rows: none;
-}
-
+        display: flex;
+        flex-direction: column;
+    }
     .card:hover {
         box-shadow: 0 8px 16px 0 rgb(71, 70, 70);
       }
-    /*directory*/
-
-
-
+  
+  
+/*directory*/
 .list section h2 {
     display: block;
     font-size: 14px;
